--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,8 +2,8 @@ spring.application.name=Spring-Security-ex1
 
 
 # ******* SECURITY ******
-spring.security.user.name=kalpa
-spring.security.user.password=pwd1
+#spring.security.user.name=kalpa
+#spring.security.user.password=pwd1
 
 # ******* DATABASE ******
 spring.datasource.url=jdbc:mysql://localhost:3306/security
